<resources>
    <string name="app_name">IT Words</string>

    <!-- Auth Activity -->
    <string name="auth_title">Вітаємо!\nУвійдіть у свій Google-аккаунт</string>
    <string name="auth_log_in">Увійти</string>
    <string name="failure_auth">Вхід провалено. Спробуйте, будь ласка, ще раз</string>
    <!-- /Auth Activity -->

    <!-- User Level -->
    <string name="user_level_beginner">Початківець</string>
    <string name="user_level_explorer">Дослідник</string>
    <string name="user_level_enthusiast">Ентузіаст</string>
    <string name="user_level_hunter">Мисливець</string>
    <string name="user_level_king">Король</string>
    <string name="user_level_emperor">Імператор</string>
    <!-- /User Level -->

    <!-- Sync Activity -->
    <string name="syncing_kits">Завантаження наборів…</string>
    <string name="syncing_progress">Синхронізація вашого прогресу…</string>
    <string name="syncing_end">Синхронізацію завершено</string>
    <string name="syncing_next">Далі</string>
    <!-- /Sync Activity -->

    <!-- Main Activity -->
    <string name="main_tab_home">Головна</string>
    <string name="main_tab_my_kits">Мої набори</string>
    <string name="main_tab_predefined_kits">Готові набори</string>
    <string name="main_loading">Завантаження…</string>
    <!-- /Main Activity -->

    <!-- Main Fragment -->
    <string name="main_user_level_placeholder">Вивчено %d/%d слів</string>
    <string name="main_zero">0</string>
    <string name="main_words_learning">Слів на вивченні</string>
    <string name="main_learn_button">Вчити</string>
    <string name="main_my_kits_button">Переглянути мої набори</string>
    <!-- /Main Fragment -->

    <!-- Word Kits Categories -->
    <string name="kit_category_default">Основи</string>
    <string name="kit_category_arch">Архітектура</string>
    <string name="kit_category_programming">Розробка</string>
    <string name="kit_category_math">Математика</string>
    <string name="kit_category_other">Інші</string>
    <string name="kit_category_custom">Користувацькі</string>
    <!-- /Word Kits Categories -->

    <!-- Word Kits Previews -->
    <string name="kit_progress_placeholder">%d/%d</string>
    <!-- /Word Kits Previews -->

    <!-- Learning Kits Activity -->
    <string name="kits_learning_not_learning">Не вивчається жоден набір 🥺\nДодайте набір із готових,\nабо ж створіть свій 👇</string>
    <string name="kits_create_btn">Створити набір</string>
    <!-- /Learning Kits Activity -->

    <!-- Kit Details Activity -->
    <string name="kit_details_no_words">Ще немає жодного слова 😉\n Додайте свої слова 👇</string>
    <string name="kit_details_size_placeholder">%d слів</string>
    <string name="kit_details_add_word">+ Додати слово</string>
    <string name="kit_details_learn_btn">Вчити слова</string>
    <string name="kit_details_search_btn">Знайти слова</string>
    <!-- /Kit Details Activity -->

    <!-- Word Item -->
    <string name="word_item_added_by_user_placeholder">Додано користувачем. Скарг: %d</string>
    <!-- /Word Item -->

    <!-- Search Activity -->
    <string name="search_hint">Введіть слово…</string>
    <string name="search_not_found">Нічого не знайдено 🙈</string>
    <string name="search_default_text">Почніть вводити слово українською чи англійскою, щоб знайти його у словнику 📚</string>
    <string name="search_added_to_kit">Слово додано у набір</string>
    <string name="search_removed_from_kit">Слово прибрано із набору</string>
    <!-- /Search Activity -->

    <!-- Learning Activity -->
    <string name="learning_title">Вивчення слів</string>
    <string name="learning_select_correct_translate">Оберіть правильний переклад</string>
    <string name="learning_select_correct_translate_action">Оберіть правильний переклад:</string>
    <string name="learning_enter_correct_answer">Введіть правильну відповідь</string>
    <string name="learning_enter_correct_answer_action">Введіть правильну відповідь:</string>
    <string name="learning_enter_answer_hint_placeholder">Введіть слово (%d літер)</string>
    <string name="learning_progress_placeholder">%d / %d</string>
    <string name="learning_i_dont_know">Я не знаю</string>
    <string name="learning_test_listen_to_word">Прослухати слово</string>
    <string name="learning_result_progress_placeholder">Вітаємо! 🎉\nВи відповідли правильно на %d з %d питань!</string>
    <string name="learning_result_to_kit">До набору</string>
    <string name="learning_answer_correct">Відповідь вірна 🎉</string>
    <string name="learning_answer_incorrect">Відповідь невірна 🙈</string>
    <!-- /Learning Activity -->

    <string name="oauth_client_id">862495921780-q7he038d0dvi1vnj76cj6lmapi85s8ec.apps.googleusercontent.com</string>

</resources>