<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/browser_actions_bg_grey"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/main_user_photo"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_no_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ImgStyle.Circle" />

            <TextView
                android:id="@+id/main_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:lines="1"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_user_photo" />

            <TextView
                android:id="@+id/main_user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:lines="1"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_user_name" />

            <ImageButton
                android:id="@+id/main_logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:src="@drawable/ic_logout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/main_user_level_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_no_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ImgStyle.Circle" />

            <TextView
                android:id="@+id/main_user_level_name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_bold"
                android:lines="1"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/main_user_level_progress_text"
                app:layout_constraintEnd_toStartOf="@+id/main_user_levels_details_button"
                app:layout_constraintStart_toEndOf="@+id/main_user_level_icon"
                app:layout_constraintTop_toTopOf="@+id/main_user_level_icon" />

            <ImageButton
                android:id="@+id/main_user_levels_details_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:src="@drawable/ic_info"
                app:layout_constraintBottom_toBottomOf="@+id/main_user_level_name_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/main_user_level_name_text" />

            <TextView
                android:id="@+id/main_user_level_progress_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:lines="1"
                android:text="@string/main_user_level_placeholder"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/main_user_level_icon"
                app:layout_constraintStart_toStartOf="@+id/main_user_level_name_text"
                app:layout_constraintTop_toBottomOf="@+id/main_user_level_name_text" />

            <ProgressBar
                android:id="@+id/main_user_level_progress"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:progressDrawable="@drawable/shape_bg_progress_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_user_level_icon" />

            <TextView
                android:id="@+id/main_user_level_progress_start_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/roboto_bold"
                android:lines="1"
                android:text="@string/user_level_beginner"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/main_user_level_progress_end_text"
                app:layout_constraintStart_toStartOf="@+id/main_user_level_progress"
                app:layout_constraintTop_toBottomOf="@+id/main_user_level_progress" />

            <TextView
                android:id="@+id/main_user_level_progress_end_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_bold"
                android:gravity="end"
                android:lines="1"
                android:layout_marginStart="4dp"
                android:text="@string/user_level_explorer"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/main_user_level_progress"
                app:layout_constraintStart_toEndOf="@+id/main_user_level_progress_start_text"
                app:layout_constraintTop_toBottomOf="@+id/main_user_level_progress" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/main_words_amount_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="48dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:lines="1"
                android:text="@string/main_zero"
                android:textColor="@color/colorPrimary"
                android:textSize="42sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/main_words_learning_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:lines="1"
                android:text="@string/main_words_learning"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_words_amount_text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/main_kits_button"
                style="@style/BtnStyle.Outline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/main_my_kits_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_words_learning_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>