<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/search_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:src="@drawable/ic_back" />

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/shape_bg_search"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="8dp"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:lines="1"
            android:paddingHorizontal="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/browser_actions_bg_grey"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_toolbar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_results_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_word" />

        <include
            android:id="@+id/search_loader"
            layout="@layout/layout_loader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <TextView
            android:id="@+id/search_not_found_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:fontFamily="@font/roboto_black"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/search_not_found"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auth_logo_image" />

        <TextView
            android:id="@+id/search_default_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:fontFamily="@font/roboto_black"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/search_default_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auth_logo_image" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>