<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/kit_details_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/ic_no_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/kit_details_toolbar_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorTranslucentImage"
        app:layout_constraintBottom_toBottomOf="@+id/kit_details_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/kit_details_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/kit_details_cards_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:src="@drawable/ic_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kit_details_back_button">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/kit_details_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_black"
                    android:gravity="center"
                    android:lines="2"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/kit_details_back_button" />

                <TextView
                    android:id="@+id/kit_details_size_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_reg"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/kit_details_name_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/kit_details_progress_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="gone"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/kit_details_progress_add_word_button"
                        style="@style/BtnStyle.Outline.White.Small"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginHorizontal="64dp"
                        android:text="@string/kit_details_add_word"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toTopOf="@+id/kit_details_progress_bar"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ProgressBar
                        android:id="@+id/kit_details_progress_bar"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="0dp"
                        android:layout_height="12dp"
                        android:layout_marginHorizontal="16dp"
                        android:progressDrawable="@drawable/shape_bg_progress_bar"
                        app:layout_constraintBottom_toBottomOf="@+id/kit_details_progress_text"
                        app:layout_constraintEnd_toStartOf="@+id/kit_details_progress_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/kit_details_progress_text" />

                    <TextView
                        android:id="@+id/kit_details_progress_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:lines="1"
                        android:text="@string/kit_progress_placeholder"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/kit_details_content_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kit_details_image">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/kit_details_words_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/kit_details_learn_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_word" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/kit_details_learn_button"
            style="@style/BtnStyle.AppPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/kit_details_learn_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/kit_details_no_words_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kit_details_image">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:fontFamily="@font/roboto_black"
            android:gravity="center"
            android:text="@string/kit_details_no_words"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/kit_details_search_button"
            style="@style/BtnStyle.Outline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="24dp"
            android:text="@string/kit_details_search_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_learn_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>